ecommerce-monolith/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-monolith
  namespace: default
  labels:
    app: ecommerce-monolith
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-monolith
  template:
    metadata:
      labels:
        app: ecommerce-monolith
    spec:
      containers:
        - name: ecommerce-monolith
          image: woorea/ecommerce-monolith:$COMMIT_SHA1
          ports:
            - containerPort: 8080
              name: http
