ecommerce-monolith/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-monolith
  namespace: default
  labels:
    app: ecommerce-monolith
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: ecommerce-monolith
